Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-101881

appman wipes PWD after PackageManager.startPackageInstallation()

    XMLWordPrintable

Details

    • Linux/X11, Windows
    • bc06a04dd8 (qt/qtapplicationmanager/dev) 3648652eb9 (qt/qtapplicationmanager/6.2) 5c94572c57 (qt/qtapplicationmanager/6.3) bb158100dd (qt/qtapplicationmanager/5.15) bb158100dd (qt/tqtc-qtapplicationmanager/5.15) 3648652eb9 (qt/qtapplicationmanager/6.2)

    Description

      Steps to reproduce

      1. On your dev PC, extract the attached project to a new directory ("APPROOT")
      2. From the console, cd into <APPROOT>
      3. Run `appman -c am-config.yaml`
      4. Click the "Install" button in the GUI
      5. Close the GUI window
      6. Run `appman -c am-config.yaml` again

       

      Outcomes

      • After Step #4, the package is installed into <APPROOT>/apps/animated-windows.rabbit/ (This is expected)
      • After Step #4, an empty directory is created at <APPROOT>/animated-windows.rabbit/ (This is NOT expected)
      • After Step #6, the contents of <APPROOT> get deleted and appman fails to load main.qml (This is NOT expected)

       

      Notes

      • If Step #4 is skipped, then nothing gets deleted
      • If we cd into <APPROOT>/apps/ and run "appman -c ../am-config.yaml" instead, then nothing gets deleted

      Attachments

        For Gerrit Dashboard: QTBUG-101881
        # Subject Branch Project Status CR V

        Activity

          People

            rgriebl Robert Griebl
            skoh-qt Sze Howe Koh
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes